k8s-configurations/helm/helm-ingress-values.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
      spec.ingressClassName: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /$1
    name: mongo-express
      
spec:
  rules:
  - host: mongo-test.datatravels.me
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: mongo-express-service
              port:
                number: 8081
  - host: mongo-test.datatravels.me
    http:
      paths:
      - backend:
          service:
            name: nginx-test-svc
            port:
              number: 80
        path: /test(.*)
        pathType: Exact
